# MasterAIOS

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  pytest.ini
aios/: __init__.py  __main__.py  cli.py  embed.py  llm.py
aios/acp/: __init__.py  client.py  runner.py
aios/db/migrations/: 0001-routing.sql  0002-steward.sql  0003-mindscape.sql  0004-toolbox.sql  0005-wellbeing.sql
aios/integrations/: __init__.py  amap.py  url_fetch.py
aios/mindscape/: __init__.py  cli.py  db.py
aios/pg/: __init__.py  archival.py  client.py
aios/route/: __init__.py  db.py
aios/scaffold/: __init__.py  agent.py
aios/steward/: __init__.py  cli.py  db.py
aios/toolbox/: __init__.py  cli.py  db.py
aios/wellbeing/: __init__.py  brief.py  cli.py  db.py
deploy/: aios.service  deploy.sh  run_migrations.sh  server_setup.sh  switch-model.sh
docs/: README.md  SECURITY_CHECKLIST.md  agent-contract.md  architecture.md  upgrade-from-upstream.md
docs/evolution/phases/: phase-fractal-rewrite.md
scripts/: backfill_legacy_conversations.py  backup_database.sh  init_db.sql  install_pgvector.sh  restore_database.sh  run_nanobot.sh
tests/unit/: test_acp_client.py  test_pg_archival_sql.py
workspace/: AGENTS.md  SOUL.md  USER.md  config.json
workspace/agents/mindscape/: routing_eval.jsonl  seed_examples.jsonl
workspace/agents/steward/: routing_eval.jsonl  seed_examples.jsonl
workspace/agents/toolbox/: routing_eval.jsonl  seed_examples.jsonl
workspace/agents/wellbeing/: routing_eval.jsonl  seed_examples.jsonl
(+8 files in other folders)
